<resources>
    <string name="app_name">Adventure</string>
    <string name="facebook_app_id">1757209921226171</string>
    <string name="fb_login_protocol_scheme">fb1757209921226171</string>
    <string name="google_geo_api">AIzaSyDVpmSuzT-tjzo8vr7zM2qk9pGK4YlTOls</string>
    <string name="google_direction_api">AIzaSyCpA0--PrBdpPT129BFxTlmwndRJdO8WVk</string>
    <string name="openDrawer">Open navigation drawer</string>
    <string name="closeDrawer">Close navigation drawer</string>
    <string name="title_search">Tìm kiếm…</string>
    <string name="field_can_not_empty">Không được để trống trường này</string>
    <string name="login_via_email_btn_splash">Đăng nhập qua email</string>
    <string name="login_via_facebook_btn_splash">Đăng nhập qua Facebook</string>
    <string name="signup_via_email_btn_splash">Đăng ký qua email</string>
    <string name="email_et_loginviaemail">Email hoặc số điện thoại</string>
    <string name="password_et_loginviaemail">Mật khẩu</string>
    <string name="login_btn_loginviaemail">Đăng nhập</string>
    <string name="forget_password_tv_loginviaemail">Quên mật khẩu?</string>
    <string name="login_success_loginviaemail">Đăng nhập thành công</string>
    <string name="error_phonenumber_email_et_loginviaemail">Email hoặc số điện thoại không tồn tại</string>
    <string name="error_password_et_loginviaemail">Mật khẩu không đúng</string>
    <string name="email_et_signupviaemail">Email hoặc số điện thoại</string>
    <string name="firstname_et_signupviaemail">Họ đệm</string>
    <string name="lastname_et_signupviaemail">Tên</string>
    <string name="password_et_signupviaemail">Mật khẩu</string>
    <string name="repassword_et_signupviaemail">Nhập lại mật khẩu</string>
    <string name="accept_cb_signupviaemail">Chấp nhận</string>
    <string name="term_services_tv_signupviaemail"> điều khoản dịch vụ</string>
    <string name="signup_btn_signupviaemail">Đăng ký</string>
    <string name="error_repassword_et_signupviaemail">Mật khẩu không khớp</string>
    <string name="sign_up_success_signupviaemail">Đăng ký thành công!</string>
    <string name="error_phonenumber_email_signupviaemail">Email hoặc số điện thoại đã tồn tại</string>
    <string name="trip_detail_tv_trip_shortcut">Chi tiết</string>
    <string name="unit_people_tv_trip_shortcut">người</string>
    <string name="textview_null">Không có</string>
    <string name="today_tv_status_shortcut">Hôm nay, </string>
    <string name="yesterday_tv_status_shortcut">Hôm qua, </string>
    <string name="join_trip_tv_trip_schedule">Tham gia</string>
    <string name="cancel_request_tv_trip_schedule">Huỷ yêu cầu</string>
    <string name="accept_invite_tv_trip_schedule">Chấp nhận lời mời</string>
    <string name="leave_trip_tv_trip_schedule">Rời khỏi chuyến đi</string>
    <string name="msg_confirm_cancel_request">Bạn có chắc chắn huỷ yêu cầu tham gia chuyến đi này?</string>
    <string name="interested_trip_tv_trip_schedule">Quan tâm</string>
    <string name="contact_trip_tv_trip_schedule">Liên hệ</string>
    <string name="uninterested_tv_trip_schedule">Huỷ quan tâm</string>
    <string name="msg_confirm_uninterested">Bạn có chắc chắn huỷ quan tâm chuyến đi này?</string>
    <string name="msg_confirm_leave_trip">Bạn có chắc chắn rời khỏi chuyến đi này chuyến đi này?</string>
    <string name="cancel_btn_dialog">Trở về</string>
    <string name="hint_msg_request_member">Giới thiệu đôi chút về bạn…</string>
    <string name="monitor_trip_member">Trưởng đoàn</string>
    <string name="member_trip_member">Thành viên</string>
    <string name="accept_btn_trip_member">Chấp nhận</string>
    <string name="reject_btn_trip_member">Từ chối</string>
    <string name="success_accept_trip_member">đã trở thành một phần của chuyến đi.</string>
    <string name="success_reject_trip_member">Đã từ chối yêu cầu của</string>
    <string name="tb_friend">Bạn bè</string>
    <string name="accept_btn_friend_and_follow">Chấp nhận</string>
    <string name="reject_btn_friend_and_follow">Từ chối</string>
    <string name="friend_btn_friend_and_follow">Bạn bè</string>
    <string name="follow_btn_friend_and_follow">Theo dõi</string>
    <string name="add_friend_btn_friend_and_follow">Kết bạn</string>
    <string name="following_btn_friend_and_follow">Đang theo dõi</string>
    <string name="request_friend_tv_friend_and_follow">Lời mời kết bạn</string>
    <string name="friend_detail_tv_friend_and_follow">Chi tiết</string>
    <string name="cancel_friend_btn_friend_and_follow">Huỷ kết bạn</string>
    <string name="cancel_follow_btn_friend_and_follow">Huỷ theo dõi</string>
    <string name="message_btn_friend_and_follow">Tin nhắn</string>
    <string name="success_request_friend">Đã gửi lời mời kết bạn tới </string>
    <string name="error_request_friend_not_found">Không có lời mời kết bạn nào.</string>
    <string name="success_confirm_request_friend">Kết bạn thành công</string>
    <string name="error_browse_friend">Không có bạn bè nào.</string>
    <string name="count_trip_created_profile">Tổ chức %1$d chuyến đi</string>
    <string name="count_trip_joined_profile">Tham gia %1$d chuyến đi</string>
    <string name="count_place_arrived_profile">Đặt chân tới %1$d địa điểm</string>
    <string name="count_follower_profile">%1$d người đang theo dõi</string>
    <string name="message_btn_profile">Tin nhắn</string>
    <string name="edit_profile_info">Sửa thông tin cá nhân</string>
    <string name="information_btn_profile">Thông tin</string>
    <string name="trip_btn_profile">Chuyến đi</string>
    <string name="friend_btn_profile">Bạn bè</string>
    <string name="photo_btn_profile">Ảnh</string>
    <string name="label_tb_profile_basic_info">Thông tin cá nhân</string>
    <string name="title_edit_profile_info">Chỉnh sửa thông tin cá nhân</string>
    <string name="label_image_profile">Ảnh trang cá nhân</string>
    <string name="label_basic_profile_info">Thông tin cá nhân</string>
    <string name="label_contact_profile_info">Thông tin liên hệ</string>
    <string name="label_detail_profile_info">Chi tiết về bạn</string>
    <string name="label_connective_profile_info">Kết nối</string>
    <string name="label_birthday">Ngày sinh</string>
    <string name="label_gender">Giới tính</string>
    <string name="label_email">Email</string>
    <string name="label_phone_number">Số điện thoại</string>
    <string name="label_address">Địa chỉ</string>
    <string name="label_religion">Tôn giáo</string>
    <string name="label_intro">Giới thiệu</string>
    <string name="update_btn_edit_profile_info">Cập nhật</string>
    <string name="choose_birthday_hint">Chọn ngày sinh…</string>
    <string name="label_male_gender">Name</string>
    <string name="label_female_gender">Nữ</string>
    <string name="label_other_gender">Khác</string>
    <string name="success_edit_profile_info">Cập nhật thông tin cá nhân thành công</string>
    <string name="schedule_tablayout_trip">Lịch trình</string>
    <string name="map_tablayout_trip">Bản đồ</string>
    <string name="discuss_tablayout_trip">Thảo luận</string>
    <string name="diary_tablayout_trip">Nhật ký</string>
    <string name="members_tablayout_trip">Thành viên</string>
    <string name="request_member_tablayout_trip">Yêu cầu</string>
    <string name="profile_drawer_menu_home_page">Trang cá nhân</string>
    <string name="trip_drawer_menu_home_page">Chuyến đi</string>
    <string name="travelling_trip_drawer_menu_home_page">Đang diễn ra</string>
    <string name="group_drawer_menu_home_page">Nhóm</string>
    <string name="setting_drawer_menu_home_page">Cài đặt</string>
    <string name="about_drawer_menu_home_page">Thông tin</string>
    <string name="logout_drawer_menu_home_page">Đăng xuất</string>
    <string name="edit_toolbar_menu_trip">Chỉnh sửa</string>
    <string name="request_tablayout_friend">Yêu cầu</string>
    <string name="suggestion_tablayout_friend">Đề xuất</string>
    <string name="all_tablayout_friend">Tất cả</string>
    <string name="following_tablayout_friend">Theo dõi bạn</string>
    <string name="follower_tablayout_friend">Bạn theo dõi</string>
    <string name="tb_status">Bài viết</string>
    <string name="like_tv_status">Thích</string>
    <string name="comment_tv_status">Bình luận</string>
    <string name="count_like_tv_status">người thích điều này</string>
    <string name="write_comment_hint_tv_status">Viết bình luận…</string>
    <string name="persons_like_this_tv_status">Những người thích nội dung này</string>
    <string name="image_detail_tv_trip_detail">Xem tất cả</string>
    <string name="error_null_diary_trip">Chuyến đi này chưa có nhật ký.</string>
    <string name="call_btn_member_trip">Gọi</string>
    <string name="fab_close">Đóng</string>
    <string name="fab_create_trip">Tạo chuyến đi</string>
    <string name="fab_create_status">Đăng trạng thái</string>
    <string name="title_tb_create_status">Đăng trạng thái</string>
    <string name="title_tb_edit_image_create_status">Sửa ảnh trạng thái</string>
    <string name="post_tb_right_btn_create_status">Đăng</string>
    <string name="insert_status_hint_create_status">Chia sẻ cảm xúc của bạn!</string>
    <string name="add_image_btn_create_status">Thêm ảnh</string>
    <string name="take_photo_btn_create_status">Chụp ảnh</string>
    <string name="emojicon_btn_create_status">Biểu tượng</string>
    <string name="keyboard_btn_create_status">Bàn phím</string>
    <string name="warning_havenot_image">Bạn không có ảnh để chọn. Hãy chụp ảnh!</string>
    <string name="folder_title">Thư mục</string>
    <string name="choose_image_title">Chọn ảnh</string>
    <string name="success_post_status">Đăng trạng thái thành công.</string>
    <string name="only_me_privacy">Chỉ mình tôi</string>
    <string name="friend_privacy">Bạn bè</string>
    <string name="public_privacy">Công khai</string>
    <string name="description_image">Miêu tả ảnh…</string>
    <string name="done_btn_edit_image_create_status">Cập nhật</string>
    <string name="error_connect">Lỗi kết nối</string>
    <string name="cancel_create_post">Huỷ bỏ thao tác</string>
    <string name="msg_confirm_cancel_create_post">Các dữ liệu bạn vừa nhập sẽ không được lưu lại.</string>
    <string name="confirm_cancel_create_post">Huỷ bỏ </string>
    <string name="reject_cancel_create_post">Tiếp tục nhập</string>
    <string name="copy_dialog_comment_status">Sao chép</string>
    <string name="edit_dialog_comment_status">Sửa</string>
    <string name="delete_dialog_comment_status">Xoá</string>
    <string name="copy_to_clipboard">Đã sao chép</string>
    <string name="cancel_dialog">Huỷ</string>
    <string name="update_dialog">Cập nhật</string>
    <string name="title_tb_create_trip">Tạo chuyến đi</string>
    <string name="name_create_trip">Tên chuyến đi…</string>
    <string name="description_create_trip">Miêu tả…</string>
    <string name="start_pos_create_trip">Điểm bắt đầu…</string>
    <string name="period_create_trip">Thời gian…</string>
    <string name="destination_summary_create_trip">Tóm tắt điểm đến…</string>
    <string name="destination_create_trip">Điểm đến…</string>
    <string name="money_create_trip">Kinh phí (/người)…</string>
    <string name="member_create_trip">Số người…</string>
    <string name="vehicle_create_trip">Phương tiện…</string>
    <string name="toolbox_create_trip">Chuẩn bị…</string>
    <string name="note_create_trip">Lưu ý…</string>
    <string name="title_schedule_create_trip">Tiêu đề…</string>
    <string name="content_schedule_create_trip">Nội dung…</string>
    <string name="start_time_create_trip">Bắt đầu…</string>
    <string name="end_time_create_trip">Kết thúc…</string>
    <string name="label_make_admin_group">Cấp quyền quản trị</string>
    <string name="label_remove_admin_group">Loại bỏ quyền quản trị</string>
    <string name="label_remove_member_group">Loại khỏi nhóm</string>
    <string name="label_block_member_group">Chặn khỏi nhóm</string>
</resources>