<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group
        android:id="@+id/groupAccess"
        android:checkableBehavior="single">
        <item
            android:id="@+id/itemProfile"
            android:icon="@drawable/ic_face_gray_24dp"
            android:title="@string/profile_drawer_menu_home_page" />
        <item
            android:id="@+id/itemTrip"
            android:icon="@drawable/ic_flight_takeoff_gray_24dp"
            android:title="@string/trip_drawer_menu_home_page" />
        <item
            android:id="@+id/itemInterested"
            android:icon="@drawable/ic_favorite_gray_24dp"
            android:title="@string/travelling_trip_drawer_menu_home_page" />
        <item
            android:id="@+id/itemGroup"
            android:icon="@drawable/ic_account_balance_gray_24dp"
            android:title="@string/group_drawer_menu_home_page" />
    </group>

    <group
        android:id="@+id/groupAction"
        android:checkableBehavior="single">
            <item
                android:id="@+id/itemSetting"
                android:title="@string/setting_drawer_menu_home_page" />
            <item
                android:id="@+id/itemInfo"
                android:title="@string/about_drawer_menu_home_page" />
            <item
                android:id="@+id/itemLogout"
                android:title="@string/logout_drawer_menu_home_page" />
    </group>
</menu>