<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="100dp"
              android:layout_height="wrap_content"
              android:orientation="vertical">

    <TextView
        android:id="@+id/tvCopyComment"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@drawable/selector_gray_white_tv"
        android:clickable="true"
        android:gravity="center_vertical"
        android:paddingLeft="@dimen/margin_medium"
        android:text="@string/copy_dialog_comment_status"/>

    <TextView
        android:id="@+id/tvEditComment"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@drawable/selector_gray_white_tv"
        android:clickable="true"
        android:gravity="center_vertical"
        android:paddingLeft="@dimen/margin_medium"
        android:text="@string/edit_dialog_comment_status"/>

    <TextView
        android:id="@+id/tvDeleteComment"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@drawable/selector_gray_white_tv"
        android:clickable="true"
        android:gravity="center_vertical"
        android:paddingLeft="@dimen/margin_medium"
        android:text="@string/delete_dialog_comment_status"/>

</LinearLayout>