<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/margin_medium">

    <EditText
        android:id="@+id/etMessageRequestMember"
        android:layout_width="match_parent"
        android:layout_height="@dimen/max_height_et"
        android:background="@android:color/transparent"
        android:hint="@string/hint_msg_request_member"
        android:textSize="@dimen/txt_small_medium"
        android:gravity="top"/>

    <Button
        android:id="@+id/btnCancelRequest"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/btn_height_small"
        android:layout_alignParentRight="true"
        android:layout_below="@id/etMessageRequestMember"
        android:layout_marginLeft="@dimen/margin_big"
        android:layout_marginRight="@dimen/margin_big"
        android:layout_marginTop="@dimen/margin_big"
        android:background="@drawable/selector_gray_white_btn"
        android:text="@string/cancel_dialog"
        android:textAllCaps="false"/>

    <Button
        android:id="@+id/btnConfirmRequest"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/btn_height_small"
        android:layout_below="@id/etMessageRequestMember"
        android:layout_marginTop="@dimen/margin_big"
        android:layout_toLeftOf="@id/btnCancelRequest"
        android:background="@drawable/selector_green_btn"
        android:text="@string/update_dialog"
        android:textAllCaps="false"
        android:textColor="@color/white"/>

</RelativeLayout>