<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="120dp"
              android:layout_height="wrap_content"
              android:orientation="vertical">

    <TextView
        android:id="@+id/tvCopyStatus"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@drawable/selector_gray_white_tv"
        android:clickable="true"
        android:drawableLeft="@drawable/ic_content_copy_grey_500_18dp"
        android:drawablePadding="@dimen/margin_small"
        android:gravity="center_vertical"
        android:paddingLeft="@dimen/margin_medium"
        android:text="@string/copy_dialog_comment_status"/>

    <TextView
        android:id="@+id/tvEditStatus"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@drawable/selector_gray_white_tv"
        android:clickable="true"
        android:drawableLeft="@drawable/ic_edit_grey_500_18dp"
        android:drawablePadding="@dimen/margin_small"
        android:gravity="center_vertical"
        android:paddingLeft="@dimen/margin_medium"
        android:text="@string/edit_dialog_comment_status"/>

    <TextView
        android:id="@+id/tvDeleteStatus"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@drawable/selector_gray_white_tv"
        android:clickable="true"
        android:drawableLeft="@drawable/ic_delete_grey_500_18dp"
        android:drawablePadding="@dimen/margin_small"
        android:gravity="center_vertical"
        android:paddingLeft="@dimen/margin_medium"
        android:text="@string/delete_dialog_comment_status"/>

</LinearLayout>